# Frameval

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.cursor/plans/: frameval_full_implementation_c97ecb7b.plan.md
.github/workflows/: ci.yml  nightly.yml
.specify/memory/: constitution.md
baselines/: seed.sql
docker/engine/: Dockerfile
docker/grader/: Dockerfile
docker/sandbox/: Dockerfile
docs/: SRS.md  ci.md  task-authoring.md
docs/calibration/: README.md  labels-template.csv
docs/demo/: checklist.md  scenario.md
engine/: .air.toml  go.mod  go.sum
engine/proto/: grader.pb.go  grader_grpc.pb.go
examples/01-bare-vs-ralph/: README.md  experiment.yaml
examples/02-evaluate-your-own-claudemd/: README.md  experiment.yaml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
grader/: composite.py  config.py  llm_client.py  pyproject.toml  server.py
grader/code_grader/: __init__.py  grader.py
grader/failure_classifier/: __init__.py  grader.py  prompts.py  taxonomy.py
grader/failure_classifier/tests/: conftest.py  test_classifier.py  test_taxonomy.py
grader/failure_classifier/tools/: score_validation.py  test_score_validation.py
grader/frameval_grader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
grader/llm_judge/: __init__.py  grader.py  prompts.py
grader/llm_judge/tests/: test_judge.py
grader/process_grader/: grader.py
grader/proto/: grader_pb2.py  grader_pb2_grpc.py
grader/spec_adherence/: grader.py
grader/stats/: __init__.py  engine.py
grader/tests/: test_code_grader.py  test_composite.py  test_llm_client.py  test_stats.py
grader/tests/integration/: conftest.py  test_grpc_server.py
memory/: MEMORY.md  feedback_gh_issue_permissions.md
proto/: buf.gen.yaml  grader.proto
scripts/: dev-engine-no-air.sh  dev-engine.sh  dev-frontend.sh  dev-full.sh  dev-grader.sh  dev-local.sh  dev-stop.sh
tasks/: tasks.json  tasks.yaml
(+494 files in other folders)
