[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameval-grader"
version = "0.1.0"
description = "Frameval Python grader service"
requires-python = ">=3.11"
dependencies = [
  "grpcio>=1.72.0",
  "grpcio-tools>=1.72.0",
  "numpy>=2.2.0",
  "scipy>=1.15.0",
  "pydantic>=2.11.0",
  "instructor>=1.7.0",
  "anthropic>=0.52.0",
  "openai>=1.76.0",
  "pytest>=8.3.0",
  "mypy>=1.15.0",
  "ruff>=0.11.0",
  "respx>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grader*"]

[tool.pytest.ini_options]
# rootdir is grader/, so "." resolves to grader/. But code imports
# `from grader.X import Y`, which means Python needs the *parent* of
# grader/ on sys.path. Use ".." so Frameval/ ends up on sys.path and
# `import grader` resolves to the local package.
pythonpath = [".."]

[tool.ruff]
# Generated protobuf stubs are not hand-edited; lint failures there would
# be churn-only. Regenerate via `buf generate` if anything in the upstream
# proto changes.
extend-exclude = ["proto/grader_pb2.py", "proto/grader_pb2_grpc.py"]
